Added simple proxy supplier